--- a/hunddle/index.html
+++ b/hunddle/index.html
@@ -95,7 +95,8 @@
         <div class="container-description">
           <h1>Flowing Conversations</h1>
           <p>
-            You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+            You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time
+            loading for a more natural flow.
           </p>
         </div>
       </div>
@@ -145,15 +146,6 @@
             <a class="items-social" href=""><i class="fab fa-youtube-square"></i> youtube/hunddle</a>
             <a class="items-social" href=""><i class="fab fa-facebook-square"></i> facebok/hunddle</a>
             <a class="items-social" href=""><i class="fab fa-twitter-square"></i> twitter/hunddle</a>
-          </li>
-          <li>
-            <h1>Newsletter</h1>
-            <p>
-              To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never
-              send you spam or pass on your email address
-            </p>
-            <input type="text" placeholder="Receba atualizações no e-mail">
-            <input type="submit" value="Subscribe">
           </li>
         </div>
       </div>
